--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   position: sticky;
   z-index: 100;
+  background-color: white;
   top: 0;
   box-shadow: 0px 5px 8px -9px rgba(0,0,0.75);
 }
